<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2023 RUB-SE-LAB
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Jien</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="settings">Settings</string>
    <string name="long_text">
    <![CDATA[
        **Terms of Use**

        Thank you for using our application. Please read and understand the following terms before using the application:

        1. Health Usage: This application is provided for general informational purposes only and is not intended to diagnose or treat any medical condition. You should consult a qualified healthcare professional before making any decisions or taking any actions related to your health.

        2. Personal Data: Some personal information may be requested from the user for registration or customization purposes. We respect the privacy of our users and are committed to protecting and securing their personal data in accordance with our privacy policy.

        3. Proper Usage: You must comply with applicable laws and regulations while using the application. The application must not be used for any illegal or unethical purposes.

        4. Liability: We are not liable for any direct or indirect damages resulting from the use of this application or reliance on the information provided in it.

        Please read and accept the terms of use before using the application.

        Please customize this text according to the needs and requirements of your specific application. After adding this text, you can display it to users when they start using the application and request their agreement to the terms before proceeding.
    ]]>
</string>

    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="next">Next</string>
    <string name="raw" />
    <string name="good_morning_rodrigo">Have a Great Day</string>
    <string name="in_the_last_24_hours_i_felt_satisfied_unsatisfied">In the last 24 hours I felt: Satisfied/Unsatisfied</string>
    <string name="mdbf_questions">MDBF Questions :</string>
    <string name="are_you_ready_to_start_your_well_being_test">Are you ready to start your well-being test ?</string>
    <string name="social_context_questions">Social Context Questions :</string>
    <string name="context_question">Context Question:</string>
    <string name="rumination_question">Rumination Question:</string>
    <string name="where_are_you_right_now">Where are you right now?</string>
    <string name="event_appraisal_questions">Event Appraisal Questions :</string>
    <string name="self_esteem_question">Self-Esteem Question:</string>
    <string name="impulsivity_question">Impulsivity Question:</string>
    <string name="social_situation_question">Social Situation Question:</string>
    <string name="who_is_around_you_right_now">Who is around you right now?</string>
    <string name="your_mood_is">Your Mood is:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="physical_development">Physical development</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="user">user</string>
    <string name="write_a_note_about">Write a Note about :</string>
    <string name="write_your_notes_here">Write Your Notes Here ...</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_log_in">Please Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password!</string>
    <string name="welcome_to_jien_app">Welcome to Jien App</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="name">Name</string>
    <string name="inter_list">Inter List</string>
    <string name="inter_record">Inter Record</string>
    <string name="last_inter">Last Inter</string>
    <string name="activity">Activity</string>
    <string name="record_activity">Record Activity</string>
    <string name="my_statistics">My Statistics</string>
    <string name="morning_questions">Morning Questions</string>
    <string name="afternoon_questions">Afternoon Questions</string>
    <string name="night_questions">Night Questions</string>
    <string name="sorry_it_s_not_the_right_time_to_answer_this_questioner">Sorry, It\'s not the right time to answer this questioner</string>
    <string name="isnoon">isNoon</string>
    <string name="event_appraisal">Event_Appraisal</string>
    <string name="social_context">Social_Context</string>
    <string name="context">Context</string>
    <string name="rumination">Rumination</string>
    <string name="self_esteem">Self_Esteem</string>
    <string name="impulsivity">Impulsivity</string>
    <string name="social_situation">Social_Situation</string>
    <string name="intervention_suggestion">Intervention Suggestion</string>
    <string name="as_your_mood_is_below_50_we_suggest_that_you_do_some_intervention_a_random_one_is_selected_to_you">As your mood is below 50%, we suggest that you do some intervention.\nA random one is selected to you</string>
    <string name="go">GO</string>
    <string name="videoname">videoName</string>
    <string name="random">random</string>
    <string name="cancel">CANCEL</string>
    <string name="step_count">step_count</string>
    <string name="timestamp">timestamp</string>
    <string name="step_data">step_data</string>
    <string name="questionnaire_db">Questionnaire.db</string>
    <string name="mdbf">MDBF</string>
    <string name="in_the_last_24_hours_i_felt_restless_calm">In the last 24 hours I felt: Restless/Calm</string>
    <string name="in_the_last_24_hours_i_felt_well_unwell">In the last 24 hours I felt: Well/Unwell</string>
    <string name="in_the_last_24_hours_i_felt_relaxed_tense">In the last 24 hours I felt: Relaxed/Tense</string>
    <string name="in_the_last_24_hours_i_felt_full_of_energy_without_energy">In the last 24 hours I felt: Full of Energy/Without Energy</string>
    <string name="in_the_last_24_hours_i_felt_tired_awake">In the last 24 hours I felt: Tired/Awake</string>
    <string name="since_the_last_questionnaire_did_you_have_one_or_more_negative_experiences">Since the last questionnaire, did you have one or more negative experiences?</string>
    <string name="how_intense_was_the_most_negative_event">How intense was the most negative event?</string>
    <string name="how_intense_was_the_most_positive_event">How intense was the most positive event?</string>
    <string name="are_you_alone_at_the_moment">Are you alone at the moment?</string>
    <string name="when_you_think_of_the_people_you_are_around_you_right_now_how_does_the_following_statement_apply_i_do_not_like_these_people">When you think of the people you are around you right now, how does the following statement apply? “I do not like these people”</string>
    <string name="my_attention_is_often_focused_on_characteristics_of_myself_that_i_don_t_want_to_think_about">My attention is often focused on characteristics of myself that I don’t want to think about.</string>
    <string name="i_often_have_the_feeling_that_things_resurface_in_my_head_that_i_have_said_or_done_in_the_past">I often have the feeling that things resurface in my head that I have said or done in the past.</string>
    <string name="sometimes_i_have_a_hard_time_to_stop_thinking_about_myself">Sometimes I have a hard time to stop thinking about myself.</string>
    <string name="for_a_long_time_after_i_got_into_a_fight_or_a_disagreement_is_settled_my_thoughts_about_these_events_resurface">For a long time after I got into a fight or a disagreement is settled, my thoughts about these events resurface.</string>
    <string name="currently_i_m_satisfied_with_myself">Currently I’m satisfied with myself.</string>
    <string name="currently_i_think_about_myself_that_i_am_a_failure">Currently I think about myself that I am a failure.</string>
    <string name="since_the_last_questionnaire_i_reacted_impulsive_meaning_i_acted_without_thinking_about_potential_consequences">Since the last questionnaire, I reacted impulsive – meaning I acted without thinking about potential consequences.</string>
    <string name="since_the_last_questionnaire_i_have_been_angry_or_aggressive_to_another_person_which_i_regretted_later_on">Since the last questionnaire, I have been angry or aggressive to another person, which I regretted later on.</string>
    <string name="invalid_credentials_please_try_again">Invalid credentials. Please try again.</string>
    <string name="you_haven_t_signed_up_yet_please_sign_up_first">You haven\'t signed up yet. Please sign up first.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="change">Change</string>
    <string name="select_time">SELECT TIME</string>
    <string name="morning_notification">Morning Notification</string>
    <string name="noon_notifiaction">Noon Notifiaction</string>
    <string name="night_notification">Night Notification</string>
    <string name="textview">TextView</string>
    <string name="enter_your_goal">Enter your goal</string>
    <string name="set_goal">Set Goal</string>
    <string name="list_of_physical_activities">List of Physical Activities</string>
    <string name="list_of_interventions">List of Interventions</string>
    <string name="choose_intervention">Choose Intervention</string>
    <string name="timer_duration_in_minutes">Timer Duration (in minutes)</string>
    <string name="reset">Reset</string>
    <string name="tel_number">Tel.Number</string>
    <string name="university">University</string>
    <string name="digit_span_memory_test">Digit Span Memory Test</string>
</resources>