<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="285dp"
        android:layout_height="141dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_top" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="414dp"
        android:layout_height="282dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.507"
        app:srcCompat="@drawable/intro_backgroung_bottom" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/signup" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/homeBtb"
        style="@style/MyFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="#1DBBE6"
        android:src="@drawable/ic_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:tint="@android:color/white">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:fontFamily="@font/righteous"
        android:text="@string/please_sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/_32ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.07999998" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/ic_name"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="#000000"
        android:textColorHint="#BDBDBD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="#000000"
        android:textColorHint="#BDBDBD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEmail2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="#000000"
        android:textColorHint="#BDBDBD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logInBtn"
        style="@style/MyFab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_25sdp"
        android:backgroundTint="#1dbbe6"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail2" />
</androidx.constraintlayout.widget.ConstraintLayout>