<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2023 RUB-SE-LAB
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhysicalActivity"
    android:background="@drawable/backgrplis">

    <include
        android:id="@+id/top_bar_layout"
        layout="@layout/top_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="match_parent"
        android:layout_height="282dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/intro_background_bottom" />

    <Spinner
        android:id="@+id/spinnersactivities"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_above="@+id/text_view_countdown"
        android:layout_below="@+id/top_bar_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_marginEnd="@dimen/_60sdp"
        android:layout_marginBottom="@dimen/_75sdp"
        app:layout_constraintVertical_bias="0.079" />


    <EditText
        android:id="@+id/edit_text_timer_duration"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        android:layout_above="@+id/text_view_countdown"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/timer_duration_in_minutes"
        android:inputType="number"
        android:textColorHint="@color/beige"

        />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_start_pause"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="20dp"
        android:text="00:00"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_reset"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_100sdp"
        android:layout_marginBottom="@dimen/_53sdp"
        android:text="@string/start"
        android:background="@drawable/background_btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnersactivities"
        app:layout_constraintVertical_bias="0.588" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="225dp"
        android:background="@drawable/background_btn2"

        android:text="@string/reset"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintTop_toBottomOf="@+id/spinnersactivities"
        app:layout_constraintVertical_bias="0.588"
        tools:visibility="visible" />
</RelativeLayout>